fixes issue where nav bar cut off at 1250px

--- a/css/styles.css
+++ b/css/styles.css
@@ -554,7 +554,6 @@ main>.contacts-section {
   color: var(--orange);
   font-family: Ultima, sans-serif;
   font-size: 2.8rem;
-  margin: 4em 25px;
   width: 100%;
 }
 
@@ -563,7 +562,7 @@ main>.contacts-section {
   border-radius: 8px;
   height: 7vh;
   margin: 0;
-  padding: .25em;
+  padding: 1em;
   text-align: center;
   width: 100%;
   transition-duration: 500ms;
@@ -580,7 +579,7 @@ main>.contacts-section {
   text-shadow: -1px 1px 4px rgba(11, 77, 127, .65);
   height: 7vh;
   margin: 0;
-  padding: .25em;
+  padding: 1em;
   text-align: center;
   width: 100%;
   transition-duration: 500ms;
@@ -690,6 +689,13 @@ main>.contacts-section {
   }
 }
 
+@media (max-width: 650px) {
+  .logo {
+    display: none;
+    transition: all 1000ms ease-in;
+  }
+}
+
 @media (max-width: 950px) {
 
   .call-to-action--title {
@@ -699,32 +705,16 @@ main>.contacts-section {
     font-size: 4rem;
   }
 
-  .header {
-    display: block;
-    top: 0;
-  }
+
 
   .label {
     font-size: 1.25rem;
   }
 
-  .logo {
-    display: none;
-    transition: all 1000ms ease-in;
-  }
-
-  .menu-columns {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin: 0px;
-    padding: 0px;
-  }
-
-  .menu-columns {
+  /* .menu-columns {
     padding: 0px;
     display: block;
-  }
+  } */
 
   .mission-div:hover {
     width: 400%;
@@ -732,16 +722,6 @@ main>.contacts-section {
 
   .mission-div:focus {
     width: 400%;
-  }
-
-  .nav-link-2 {
-    padding: 1em;
-    height: fit-content;
-  }
-
-  #nav-bar>ul:nth-child(1),
-  #nav-bar>ul:nth-child(1) {
-    border-top: 0px solid transparent;
   }
 
   p {
@@ -779,6 +759,31 @@ main>.contacts-section {
   .video-container {
     min-height: fit-content;
   }
+
+}
+
+@media (max-width: 1250px) {
+
+  .header {
+    display: block;
+    top: 0;
+  }
+
+  .menu-columns {
+    padding: 0px;
+    display: block;
+  }
+
+  #nav-bar>ul:nth-child(1),
+  #nav-bar>ul:nth-child(1) {
+    border-top: 0px solid transparent;
+  }
+
+  .nav-link-2 {
+    padding: 1em;
+    height: fit-content;
+  }
+
 
 }
 
